调整[启动]：将零碎的启动游戏的代码整合在一起